[package]
name = "celestial_mechanics"
version = "0.1.0"
authors = ["Sean Moss <smoss117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
serde = {version = "1", features = ["derive"]}
ron = "0.6.2"
planet = {path = "planet" }
kinetics = {path = "kinetics" }
camera_control = { path = "camera_control" }

[profile.dev]
opt-level = 3